CREATE TABLE Station (idStation number(10) NOT NULL, nameStation varchar2(100) NOT NULL, stationTypeId number(10) NOT NULL, PRIMARY KEY (idStation));
CREATE TABLE Line (id number(10) NOT NULL, nameLine varchar2(100) NOT NULL, startStation number(10) NOT NULL, endStation number(10) NOT NULL, gaugeId number(10) NOT NULL, ownerLine varchar2(100) NOT NULL, PRIMARY KEY (id));
CREATE TABLE LineSegment (id number(10) NOT NULL, maximumWeigh number(10) NOT NULL, lenght number(10) NOT NULL, isElectrified number(10) NOT NULL, segmentOrder number(10) NOT NULL, sidingPosition number(10), sidingLength number(10), lineSegmentsTypeid number(10) NOT NULL, lineId number(10) NOT NULL, PRIMARY KEY (id));
CREATE TABLE LineSegmentType (id number(10) NOT NULL, description varchar2(100) NOT NULL, PRIMARY KEY (id));
CREATE TABLE Wagon (numberWagon number(10) NOT NULL, weight number(10, 3) NOT NULL, yearOfEntry number(10) NOT NULL, wagonModelId number(10) NOT NULL, PRIMARY KEY (numberWagon));
CREATE TABLE Locomotive (numberLocomotive number(10) NOT NULL, name varchar2(100), yearOfEntry number(10) NOT NULL, operationalSpeed number(10, 3) NOT NULL, model number(10) NOT NULL, PRIMARY KEY (numberLocomotive));
CREATE TABLE WagonsType (id number(10) NOT NULL, description varchar2(100) NOT NULL, PRIMARY KEY (id));
CREATE TABLE StationType (id number(10) NOT NULL, description varchar2(100) NOT NULL, PRIMARY KEY (id));
CREATE TABLE Operator (vatNumber varchar2(100) NOT NULL, name varchar2(100) NOT NULL, shortName varchar2(100) NOT NULL, PRIMARY KEY (vatNumber));
CREATE TABLE Gauge (idGauge number(10) NOT NULL, measure number(10) NOT NULL, PRIMARY KEY (idGauge));
CREATE TABLE Bogies (id number(10) NOT NULL, nameBogie varchar2(100) NOT NULL, numberBogies number(10) NOT NULL, PRIMARY KEY (id));
CREATE TABLE LocomotiveModel (id number(10) NOT NULL, make varchar2(100) NOT NULL, modelName varchar2(100) NOT NULL, power number(10) NOT NULL, maxSpeed number(10) NOT NULL, weight number(10) NOT NULL, length number(10, 3) NOT NULL, width number(10, 3) NOT NULL, height number(10, 3) NOT NULL, traction number(10) NOT NULL, bogiesId number(10) NOT NULL, PRIMARY KEY (id));
CREATE TABLE WagonModel (id number(10) NOT NULL, nameModel varchar2(100) NOT NULL, maker varchar2(100) NOT NULL, length number(10) NOT NULL, width number(10) NOT NULL, height number(10, 1) NOT NULL, maxSpeed number(10) NOT NULL, payload number(10, 1) NOT NULL, volume number(10, 1) NOT NULL, wagonsTypeId number(10) NOT NULL, bogiesId number(10) NOT NULL, PRIMARY KEY (id));
CREATE TABLE Electric (id number(10) NOT NULL, voltage number(10) NOT NULL, frequency number(10) NOT NULL, locomotiveModelId number(10) NOT NULL, PRIMARY KEY (id));
CREATE TABLE Diesel (id number(10) NOT NULL, combustivelCapacity number(10) NOT NULL, locomotiveModelId number(10) NOT NULL, PRIMARY KEY (id));
CREATE TABLE GaugeLocomotiveModel (gaugeId number(10) NOT NULL, locomotiveModelId number(10) NOT NULL, PRIMARY KEY (gaugeId, locomotiveModelId));
CREATE TABLE OperatorWagon (operatorVatNumber varchar2(100) NOT NULL, wagonNumber number(10) NOT NULL, PRIMARY KEY (operatorVatNumber, wagonNumber));
CREATE TABLE LocomotiveOperator (locomotiveNumber number(10) NOT NULL, operatorVatNumber varchar2(100) NOT NULL, PRIMARY KEY (locomotiveNumber, operatorVatNumber));
CREATE TABLE GaugeWagonModel (gaugeId number(10) NOT NULL, wagonModelId number(10) NOT NULL, PRIMARY KEY (gaugeId, wagonModelId));
CREATE TABLE Train (id number(10) NOT NULL, dateTrain date NOT NULL, timeTrain date NOT NULL, PRIMARY KEY (id));
CREATE TABLE RouteType (id number(10) NOT NULL, description varchar2(255) NOT NULL, PRIMARY KEY (id));
CREATE TABLE Area (id number(10) GENERATED AS IDENTITY, name number(10) NOT NULL, PRIMARY KEY (id));
CREATE TABLE OperatorTrain (operatorVatNumber varchar2(100) NOT NULL, trainId number(10) NOT NULL, PRIMARY KEY (operatorVatNumber, trainId));
CREATE TABLE Route (trainId number(10) NOT NULL, stationId number(10) NOT NULL, inicialStation number(10) NOT NULL, routeTypeId number(10) NOT NULL, PRIMARY KEY (trainId, stationId, inicialStation));
CREATE TABLE Freights (id number(10) NOT NULL, dateFreights date NOT NULL, trainId number(10) NOT NULL, PRIMARY KEY (id));
CREATE TABLE Path (freightsId number(10) NOT NULL, stationId number(10) NOT NULL, inicialStation number(10) NOT NULL, PRIMARY KEY (freightsId, stationId, inicialStation));
CREATE TABLE Area_Station (areaId number(10) NOT NULL, stationId number(10) NOT NULL, PRIMARY KEY (areaId, stationId));
CREATE TABLE Locomotive_Train (locomotiveNumber number(10) NOT NULL, trainId number(10) NOT NULL, PRIMARY KEY (locomotiveNumber, trainId));
CREATE TABLE WagonFreights (wagonNumber number(10) NOT NULL, freightsId number(10) NOT NULL, PRIMARY KEY (wagonNumber, freightsId));
ALTER TABLE LineSegment ADD CONSTRAINT FKLineSegmen468244 FOREIGN KEY (lineSegmentsTypeid) REFERENCES LineSegmentType (id);
ALTER TABLE WagonModel ADD CONSTRAINT FKWagonModel973052 FOREIGN KEY (wagonsTypeId) REFERENCES WagonsType (id);
ALTER TABLE LineSegment ADD CONSTRAINT FKLineSegmen635385 FOREIGN KEY (lineId) REFERENCES Line (id);
ALTER TABLE Station ADD CONSTRAINT FKStation307371 FOREIGN KEY (stationTypeId) REFERENCES StationType (id);
ALTER TABLE Line ADD CONSTRAINT FKLine995900 FOREIGN KEY (startStation) REFERENCES Station (idStation);
ALTER TABLE Line ADD CONSTRAINT FKLine43948 FOREIGN KEY (endStation) REFERENCES Station (idStation);
ALTER TABLE Line ADD CONSTRAINT FKLine888167 FOREIGN KEY (gaugeId) REFERENCES Gauge (idGauge);
ALTER TABLE Locomotive ADD CONSTRAINT FKLocomotive500975 FOREIGN KEY (model) REFERENCES LocomotiveModel (id);
ALTER TABLE Wagon ADD CONSTRAINT FKWagon68456 FOREIGN KEY (wagonModelId) REFERENCES WagonModel (id);
ALTER TABLE GaugeLocomotiveModel ADD CONSTRAINT FKGaugeLocom323377 FOREIGN KEY (gaugeId) REFERENCES Gauge (idGauge);
ALTER TABLE GaugeLocomotiveModel ADD CONSTRAINT FKGaugeLocom298192 FOREIGN KEY (locomotiveModelId) REFERENCES LocomotiveModel (id);
ALTER TABLE Diesel ADD CONSTRAINT FKDiesel600477 FOREIGN KEY (locomotiveModelId) REFERENCES LocomotiveModel (id);
ALTER TABLE Electric ADD CONSTRAINT FKElectric14557 FOREIGN KEY (locomotiveModelId) REFERENCES LocomotiveModel (id);
ALTER TABLE Line ADD CONSTRAINT FKLine191867 FOREIGN KEY (ownerLine) REFERENCES Operator (vatNumber);
ALTER TABLE OperatorWagon ADD CONSTRAINT FKOperatorWa388084 FOREIGN KEY (operatorVatNumber) REFERENCES Operator (vatNumber);
ALTER TABLE OperatorWagon ADD CONSTRAINT FKOperatorWa318392 FOREIGN KEY (wagonNumber) REFERENCES Wagon (numberWagon);
ALTER TABLE LocomotiveOperator ADD CONSTRAINT FKLocomotive526422 FOREIGN KEY (locomotiveNumber) REFERENCES Locomotive (numberLocomotive);
ALTER TABLE LocomotiveOperator ADD CONSTRAINT FKLocomotive150614 FOREIGN KEY (operatorVatNumber) REFERENCES Operator (vatNumber);
ALTER TABLE GaugeWagonModel ADD CONSTRAINT FKGaugeWagon706524 FOREIGN KEY (gaugeId) REFERENCES Gauge (idGauge);
ALTER TABLE GaugeWagonModel ADD CONSTRAINT FKGaugeWagon220236 FOREIGN KEY (wagonModelId) REFERENCES WagonModel (id);
ALTER TABLE OperatorTrain ADD CONSTRAINT FKOperatorTr118014 FOREIGN KEY (operatorVatNumber) REFERENCES Operator (vatNumber);
ALTER TABLE OperatorTrain ADD CONSTRAINT FKOperatorTr620687 FOREIGN KEY (trainId) REFERENCES Train (id);
ALTER TABLE Route ADD CONSTRAINT FKRoute991899 FOREIGN KEY (trainId) REFERENCES Train (id);
ALTER TABLE Route ADD CONSTRAINT FKRoute17296 FOREIGN KEY (stationId) REFERENCES Station (idStation);
ALTER TABLE Path ADD CONSTRAINT FKPath688832 FOREIGN KEY (stationId) REFERENCES Station (idStation);
ALTER TABLE Path ADD CONSTRAINT FKPath336240 FOREIGN KEY (freightsId) REFERENCES Freights (id);
ALTER TABLE Freights ADD CONSTRAINT FKFreights388965 FOREIGN KEY (trainId) REFERENCES Train (id);
ALTER TABLE Route ADD CONSTRAINT FKRoute987151 FOREIGN KEY (routeTypeId) REFERENCES RouteType (id);
ALTER TABLE LocomotiveModel ADD CONSTRAINT FKLocomotive181207 FOREIGN KEY (bogiesId) REFERENCES Bogies (id);
ALTER TABLE WagonModel ADD CONSTRAINT FKWagonModel456712 FOREIGN KEY (bogiesId) REFERENCES Bogies (id);
ALTER TABLE Area_Station ADD CONSTRAINT FKArea_Stati760438 FOREIGN KEY (areaId) REFERENCES Area (id);
ALTER TABLE Area_Station ADD CONSTRAINT FKArea_Stati573168 FOREIGN KEY (stationId) REFERENCES Station (idStation);
ALTER TABLE Locomotive_Train ADD CONSTRAINT FKLocomotive381419 FOREIGN KEY (locomotiveNumber) REFERENCES Locomotive (numberLocomotive);
ALTER TABLE Locomotive_Train ADD CONSTRAINT FKLocomotive508284 FOREIGN KEY (trainId) REFERENCES Train (id);
ALTER TABLE WagonFreights ADD CONSTRAINT FKWagonFreig624371 FOREIGN KEY (wagonNumber) REFERENCES Wagon (numberWagon);
ALTER TABLE WagonFreights ADD CONSTRAINT FKWagonFreig775176 FOREIGN KEY (freightsId) REFERENCES Freights (id);
ALTER TABLE Route ADD CONSTRAINT FKRoute956990 FOREIGN KEY (inicialStation) REFERENCES Station (idStation);
ALTER TABLE Path ADD CONSTRAINT FKPath285454 FOREIGN KEY (inicialStation) REFERENCES Station (idStation);
